<resources>
    <string name="app_name">The Coffee House</string>
    <string name="auth_background">auth back ground</string>
    <string name="login_by_google">Login by Google</string>
    <string name="login_by_facebook">Login by facebook</string>
    <string name="login_by_twitter">Login by Twitter</string>
    <string name="login_greeting">Login Greeting</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="login_text">Đăng nhập</string>
    <string name="forget_password_text">Quên mật khẩu</string>
    <string name="email_hint">Email</string>
    <string name="old_pwd_hint">Nhập mật khẩu cũ</string>
    <string name="new_pwd_hint">Nhập mật khẩu mới</string>
    <string name="confirm_new_pwd_hint">Xác nhận mật khẩu mới</string>
    <string name="birthday_hint">Ngày sinh</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="sign_up_text">đăng ký</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_order">Đặt món</string>
    <string name="action_store_location">Cửa hàng</string>
    <string name="action_accumulate_point">Tích điểm</string>
    <string name="action_others">Khác</string>
    <string name="customer_name_hint">Tên Khách Hàng</string>
    <string name="delivery">Giao tận nơi</string>
    <string name="pickup">Tự đến lấy</string>
    <string name="notifications">Thông báo mới</string>
    <string name="google_default_web_client_id">1008379625573-esujc5bhtv63js83cujpsefq9m0mvot0.apps.googleusercontent.com</string>

    <!--        <string name="facebook_app_id">501408904608563</string>-->
    <!--        <string name="fb_login_protocol_scheme">fb501408904608563</string>-->

    <string name="facebook_app_id">292926142546450</string>
    <string name="fb_login_protocol_scheme">fb292926142546450</string>


    <string name="must_try">Món phải thử</string>
    <string name="menu">Thực Đơn</string>
    <string name="show_more">Xem thêm</string>
    <string name="show_less">Rút gọn</string>
    <string name="order_note">Thêm ghi chú món...</string>
    <string name="optional">Tùy chọn</string>
    <string name="other_options">Những tùy chọn khác</string>
    <string name="other_requirements">Yêu cầu khác</string>
    <string name="topping">Topping</string>
    <string name="compulsory">Bắt buộc</string>
    <string name="size">Size</string>
    <string name="pick_size">Chọn một loại size</string>
    <string name="favorite">Yêu thích</string>
    <string name="search">Tìm kiếm</string>
    <string name="store_search">Tìm kiếm</string>
    <string name="choosemap">Chọn trên bản đồ</string>
    <string name="savedaddress">Địa chỉ đã lưu</string>
    <string name="addhomeaddress">Thêm địa chỉ nhà</string>
    <string name="addcompanyaddress">Thêm địa chỉ công ty</string>
    <string name="addnewaddress">Thêm địa chỉ mới</string>
    <string name="nameaddress">Tên địa chỉ*</string>
    <string name="address">Địa chỉ*</string>
    <string name="chooseaddress">Ghi địa chỉ</string>
    <string name="floor">Tòa nhà, số tầng</string>
    <string name="gate">Cổng</string>
    <string name="noti">Ghi chú khác</string>
    <string name="howtodeliver">Hướng dẫn giao hàng</string>
    <string name="nameofclient">Tên người nhận</string>
    <string name="telephonenumber">Số điện thoại</string>
    <string name="finish">Xong</string>
    <string name="smallsize">Vừa</string>
    <string name="bigsize">Lớn</string>
    <string name="map">BẢN ĐỒ</string>
    <string name="othersstore">CÁC CỬA HÀNG KHÁC</string>
    <string name="list">DANH SÁCH</string>
    <string name="favoritefood">Món yêu Thích</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promotionchange">Đổi ưu đãi</string>
    <string name="voucher">Voucher của bạn</string>
    <string name="right">Quyền lợi của bạn</string>
    <string name="yourpromotion">Phiếu ưu đãi của bạn</string>
    <string name="seeall">Xem Tất Cả</string>
    <string name="enterpromotioncode">Tìm kiếm mã khuyến mãi</string>
    <string name="outofdate">Sắp hết hạn</string>
    <string name="on_use">Sẵn sàng sử dụng</string>
    <string name="apply">Áp dụng</string>
    <string name="utilities">Tiện ích</string>
    <string name="history">Lịch sử đơn hàng</string>
    <string name="rules">Điều khoản</string>
    <string name="news">Tin tức và Khuyến...</string>
    <string name="support">Hỗ trợ</string>
    <string name="feedback">Gửi đánh giá và góp ý</string>
    <string name="contact">Liên hệ</string>
    <string name="personalinfor">Thông tin cá nhân</string>
    <string name="saveaddress">Địa chỉ đã lưu</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="newsandpromotion">Tin tức và Khuyến mãi</string>
    <string name="callcenter">Tổng đài</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="sendfeedback">Gửi phản hồi</string>
    <string name="nameofsender">Tên người gửi</string>
    <string name="emailad">Địa chỉ email</string>
    <string name="telephonenum">Số điện thoại</string>
    <string name="feedbackcontent">Nội dung phản hồi</string>
    <string name="updateinfo">Cập nhật thông tin</string>
    <string name="updateaccount">Cập nhật tài khoản</string>
    <string name="updateaccount_password">Cập nhật mật khẩu mới</string>
    <string name="enteryourname">Nhập tên của bạn</string>
    <string name="enteryourphone">Nhập số điện thoại của bạn</string>
    <string name="enteryouremail">Nhập email của bạn</string>
    <string name="enteryourbirthday">Chọn ngày sinh của bạn</string>
    <string name="recievenoti">Nhận thông báo</string>
    <string name="aboutus">Về chúng tôi</string>
    <string name="term">Điều khoản sử dụng</string>
    <string name="confirmorder">Xác nhận đơn hàng</string>
    <string name="order">Phương thức giao hàng</string>
    <string name="change">Thay đổi</string>
    <string name="addmenu">+ Thêm món</string>
    <string name="itemorder">Các món đã chọn</string>
    <string name="total">Tổng cộng</string>
    <string name="choosepromotion">Chọn khuyến mãi</string>
    <string name="paymentamount">Số tiền thanh toán</string>
    <string name="money">Thành tiền</string>
    <string name="clearoder">Xóa đơn hàng</string>
    <string name="orderfinal">Đặt hàng</string>
    <string name="title">Nội dung</string>
    <string name="description">Miêu tả</string>
    <string name="pick_an_image">Chọn một tấm hình</string>
    <string name="products">Sản phẩm</string>
    <string name="categories">Phân loại</string>
    <string name="notifications_title">Nội dung phản hồi</string>
    <string name="stores">Cửa hàng</string>
    <string name="others">Ghi chú thêm</string>
    <string name="contact_phoneNumber">18006936</string>
    <string name="admin">Admin</string>
    <string name="title_activity_admin_home">MainActivity</string>
    <string name="products_en">Products</string>
    <string name="stores_en">Stores</string>
    <string name="others_en">Others</string>
    <string name="title_en">Title</string>
    <string name="description_en">Description</string>
    <string name="pick_an_image_en">Pick an image</string>
    <string name="submit">submit</string>
    <string name="published_date">Published Date</string>
    <string name="add_new_product">Add New Product</string>
    <string name="price">Price</string>
    <string name="users">Users</string>
    <string name="banners">Banners</string>
    <string name="categories_en">Categories</string>
    <string name="admin_information">Admin Information</string>
    <string name="profit">Profit</string>
    <string name="log_out">Log out</string>
    <string name="finishoder">Đơn hàng đã hoàn tất</string>
    <string name="atstore">Tại cửa hàng</string>
    <string name="statusoderitem">Trạng thái đơn hàng</string>
    <string name="estimteddeliverytime">Thời gian giao dự kiến</string>
    <string name="complete">Hoàn tất</string>
    <string name="evaluate">Đánh giá</string>
    <string name="Callforsupport">Gọi hỗ trợ</string>
    <string name="orderagain">Đặt lại</string>
    <string name="orderinformation">Thông tin đơn hàng</string>
    <string name="receiver">Người nhận</string>
    <string name="deliveryto">Giao đến</string>
    <string name="paymentstatus">Trạng thái thanh toán</string>
    <string name="promotion_status">Phiếu khuyến mãi</string>
    <string name="codeorder">Mã đơn hàng</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="notifications_en">Notifications</string>
    <string name="promote_to_admin">Promote to admin</string>
    <string name="choose_order_method">Chọn phương thức đặt hàng</string>
    <string name="choose_store_location">Chọn quán</string>
    <string name="fix">Chọn địa chỉ</string>
    <string name="clear_this_address">Xóa địa chỉ này</string>
    <string name="fix_saved_address">Sửa địa chỉ đã lưu</string>
    <string name="version">Version</string>
    <string name="orders">Orders</string>
    <string name="recovery_email">Nhập email khôi phục</string>
    <string name="auth_password">Xác thực mật khẩu</string>
    <string name="send">Gửi yêu cầu</string>
    <string name="submit_update_pwd">Đổi mật khẩu</string>
    <string name="order_information">Order Information</string>
    <string name="recovery">Recovery</string>
    <string name="update_password">Update Password</string>
    <string name="delivery_en">Delivery</string>
    <string name="usenow">Sử dụng ngay</string>
    <string name="date">Ngày hết hạn:</string>
    <string name="add_new_store">Add new store</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="show_profit">Show profit</string>
    <string name="checkout_profit">Checkout Profit</string>
    <string name="select_to_date">Select to date</string>
    <string name="select_from_date">Select from date</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="total_orders">Total Orders</string>
    <string name="all_product">Tất cả sản phẩm</string>
    <string name="address_en">Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="store_name">Store name</string>
    <string name="promotions">Promotions</string>
    <string name="code">Code</string>
    <string name="value">Value</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="target_customer">Target Customer</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="gold">Gold</string>
    <string name="diamond">Diamond</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>