<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/products_admin_nav"
            android:icon="@drawable/ic_baseline_coffee_24"
            android:title="@string/products" />
        <item
            android:id="@+id/categories_admin_nav"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/categories" />
        <item
            android:id="@+id/notification_admin_nav"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications_title" />
        <item
            android:id="@+id/stores_admin_nav"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/stores" />
        <item
            android:id="@+id/others_admin_nav"
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="@string/others" />
    </group>
</menu>