<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white_gray"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_marginTop="5dp"
                android:id="@+id/back_button"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:text="@string/addnewaddress"/>






        </RelativeLayout>



    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameaddress"
                android:layout_marginTop="7dp"/>

            <EditText
                android:id="@+id/addnewadress_edittext"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="Nhà / Cơ quan / Gym / ..."
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/address"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_below="@+id/address"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:text="@string/chooseaddress"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>




        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="@string/floor"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gate"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="@string/gate"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="@string/howtodeliver"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameofclient"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="@string/nameofclient"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephonenumber"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:hint="@string/telephonenumber"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="350dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/accent_color"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/finish"/>




</LinearLayout>